--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,10 @@ src_dir = ./esp32-fastled-webserver
 monitor_speed = 115200
 upload_speed = 921600
 
-[env:wemos_d1_mini32]
+[env:esp32-devkitc]
 platform = espressif32
-board = wemos_d1_mini32
+board = esp32dev
 framework = arduino
-
+upload_port=/dev/ttyUSB0
 lib_deps = 
 	fastled/FastLED            @  3.5.0
