--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,14 @@ upload_speed = 921600
 platform = espressif32
 board = esp32dev
 framework = arduino
-upload_port=/dev/ttyUSB0
+upload_port = /dev/ttyUSB0
 lib_deps = 
 	fastled/FastLED            @  3.5.0
+	ayushsharma82/ElegantOTA@^2.2.9
+	ayushsharma82/WebSerial@^1.3.0
+	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
+	ayushsharma82/AsyncElegantOTA@^2.2.7
+
+extra_scripts = platformio_upload.py
+upload_protocol = custom
+upload_url = http://192.168.0.131/update
