--- a/platformio.ini
+++ b/platformio.ini
@@ -23,10 +23,11 @@ upload_port = /dev/ttyUSB0
 lib_deps = 
 	fastled/FastLED            @  3.5.0
 	ayushsharma82/ElegantOTA@^2.2.9
-	ayushsharma82/WebSerial@^1.3.0
+	; ayushsharma82/WebSerial@^1.3.0
 	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
-	ayushsharma82/AsyncElegantOTA@^2.2.7
+	; ayushsharma82/AsyncElegantOTA@^2.2.7
 
 extra_scripts = platformio_upload.py
 upload_protocol = custom
 upload_url = http://192.168.0.131/update
+board_build.partitions = min_spiffs.csv
